2006-12-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.c: Optimizations for string
	comparisons. Time spent in oblist_find_by_name() reduced by ~50%
	during startup by use of stored collation keys. Fixes bug #374854.

2006-12-13  Sven Neumann  <sven@gimp.org>

	* app/tools/tools-enums.[ch]: added missing define
	GIMP_TYPE_RECTANGLE_CONSTRAINT. Removed unused descriptions.

	* app/tools/gimprectangletool.c: made "constraint" an enum property.

2006-12-13  Øyvind Kolås  <pippin@gimp.org>

	* app/core/gimpprojection.h: indentation fix.

2006-12-12  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c: removed button reliefs to reduce
	visual clutter. Added tooltips to the menu and navigation buttons.

2006-12-12  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/burn-in-anim.scm: Don't allow one of the
	two layers to be a floating selection. Fixes bug #384096.

2006-12-12  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c (edit_actions_update): plugged a tiny
	memleak.

2006-12-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_get_tab_widget): check
	ui_manager before accessing it. Fixes warnings on destruction.

2006-12-12  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new):
	slightly increased size of the quick-mask and zoom-mode buttons.
	Also changed the style to not displace the icon when the buttons
	are pressed.

	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplayshell-appearance.c: changed "origin_button"
	to "origin". Don't draw it as a button but use an event box just
	like we do for the navigation icon in the lower right corner.

	* app/display/gimpdisplayshell-title.c
	(gimp_display_shell_format_title): use the viewable description
	for the drawable's name. We don't want to see "Qmask" in the
	statusbar.
